Fix spacing around navigation bar.

--- a/app/assets/stylesheets/controller-specific/projects.css.scss
+++ b/app/assets/stylesheets/controller-specific/projects.css.scss
@@ -1,3 +1,7 @@
+body {
+   padding-top: 40px;
+}
+
 .container > footer p {
     text-align: center; /* center align it with the container */
 }
